<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.openxava</groupId>
  <artifactId>openxavatest</artifactId>
  <version>7.7.3</version>
  <packaging>war</packaging>

  <properties>
    <openxava.version>7.7.3</openxava.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openxava</groupId>
      <artifactId>openxava</artifactId>
      <version>${openxava.version}</version>
    </dependency>
    
    <!-- last version supported for java 8 -->
    <dependency> 
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>4.13.0</version> 
      <scope>test</scope>
    </dependency>
    
    <!-- Not used in application, to test that OpenXava metadata works with GSON -->
	<dependency>
	    <groupId>com.google.code.gson</groupId>
	    <artifactId>gson</artifactId>
	    <version>2.13.2</version> 
	    <scope>test</scope>
	</dependency>
    
    
  </dependencies>
  
  <build>
    <finalName>openxavatest</finalName>
    <plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-dependency-plugin</artifactId>
			<executions>
				<execution>
					<id>unpack</id>
					<phase>package</phase>
					<goals>
						<goal>unpack</goal>
					</goals>
					<configuration>
						<artifactItems>
							<artifactItem>
								<groupId>org.openxava</groupId>
								<artifactId>openxava</artifactId>
								<version>${openxava.version}</version>
								<outputDirectory>src/main/resources</outputDirectory>
								<includes>xava/dtds/*</includes>
							</artifactItem>
						</artifactItems>
					</configuration>
				</execution>
			</executions>
		</plugin>
    
		<plugin>
			<artifactId>maven-war-plugin</artifactId>
			<version>3.3.2</version>
			<configuration>
				<packagingExcludes>
		          	WEB-INF/lib/ecj-3*.jar,
					WEB-INF/lib/fontbox-*.jar,
					WEB-INF/lib/htmlunit-*.jar,
					WEB-INF/lib/httpclient-*.jar,
					WEB-INF/lib/httpcore-*.jar,
					WEB-INF/lib/httpmime-*.jar,
					WEB-INF/lib/jetty-*.jar,
					WEB-INF/lib/junit-*.jar,
					WEB-INF/lib/neko-htmlunit-*.jar,
					WEB-INF/lib/pdfbox-*.jar,
					WEB-INF/lib/serializer-*.jar,
					WEB-INF/lib/tomcat-*.jar,
					WEB-INF/lib/websocket-*.jar,
					WEB-INF/lib/xalan-*.jar,
					WEB-INF/lib/xercesImpl-*.jar,
					WEB-INF/lib/xml-apis-*.jar
          		</packagingExcludes>
			</configuration>
		</plugin>
		
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>3.2.5</version>
			<configuration>
				<skipTests>true</skipTests>
			</configuration>
		</plugin>
		
		<plugin>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>exec-maven-plugin</artifactId>
			<version>3.1.0</version> <!-- It works with Maven 3.6.0, from 2018 -->
			<configuration>
				<mainClass>${project.groupId}.test.run.${project.artifactId}</mainClass>
			</configuration>
		</plugin>		
		
 		<!-- Ensure annotation processing (Lombok) works, especially on Java 25 -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.12.0</version>
            <configuration>
                <source>${maven.compiler.source}</source>
                <target>${maven.compiler.target}</target>
                <encoding>${project.build.sourceEncoding}</encoding>
                <annotationProcessorPaths>
                    <path>
                        <groupId>org.projectlombok</groupId>
                        <artifactId>lombok</artifactId>
                        <version>1.18.40</version>
                    </path>
                </annotationProcessorPaths>
            </configuration>
        </plugin>
        
    </plugins>
  </build>
   
</project>
